--- a/product-service.properties
+++ b/product-service.properties
@@ -1,2 +1,12 @@
 server.port=8081
 spring.application.name=product-service
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_products
+spring.datasource.username=root
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=none
