--- a/product-service.properties
+++ b/product-service.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.application.name=product-service
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 
